# Game_Studio

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.claude/hooks/: langfuse_hook.py
.studio-data/bugs/: bug_a7b93cc1.json  bug_b2bd29ae.json
.studio-data/logs/: log_a71172836d094a8a992e828e1e758084.json  log_e84200e50a784aea8defde64a1a893a8.json
.studio-data/requirements/: req_1a89dc49.json  req_7a0fb71c.json  req_9eb43545.json  req_bd3981f7.json
docs/: agent-debugging.md  design-document.md  frontend-mvp-cycle.md  langgraph-studio-debugging.md
projects/proj_1eca91c6/: game_design_doc.md
projects/proj_55e66173/: PERFORMANCE_TEST_REPORT.md  README.md  index.html  package-lock.json  package.json  performance-test.html  snake-demo.html  (+3 more)
snake-game/: game.js  index.html  style.css
studio/: langgraph_app.py
tests/: test_acceptance_contract.py  test_acceptance_evaluator.py  test_acceptance_schemas.py  test_acceptance_verifier.py  test_agent_adapters.py  test_agent_chat_cli.py  test_agent_pool.py  test_agent_profiles.py  test_approvals.py  test_artifact_registry.py  test_assumption_schemas.py  test_bootstrap.py  test_bug_flow.py  test_clarification_routes.py  test_clarification_schemas.py  test_claude_code_langfuse_hook.py  test_claude_roles.py  test_claude_worker.py  test_cli.py  test_delivery_acceptance_graph.py  test_delivery_api.py  test_delivery_events.py  test_delivery_graph.py  test_delivery_plan_service.py  test_delivery_planner_agent.py  test_delivery_runner.py  test_delivery_schemas.py  test_executor.py  test_git_tracker.py  test_graph_run.py  test_langfuse_observability.py  test_langgraph_studio.py  test_llm_logs.py  test_meeting_graph.py  test_meeting_schemas.py  test_meeting_transcript_schemas.py  test_memory_store.py  test_moderator_agent.py  test_poller.py  test_process_registry.py  (+16 more)
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.artifacts.config.ts  playwright.config.ts  vite.config.ts
(+322 files in other folders)
