[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "game-studio-runtime"
version = "0.1.0"
description = "LangGraph-based multi-agent runtime kernel for game production workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "claude-agent-sdk",
  "langgraph",
  "langchain-core",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "typer>=0.12",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["studio"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
